--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(19, 17, 17);
 }
 
 .App-link {
@@ -36,3 +36,27 @@
     transform: rotate(360deg);
   }
 }
+
+.signout-button {
+  background-color: #007bff;
+  color: white;
+  border-radius: 5px; 
+  padding: 10px 20px; 
+  border: none; 
+  cursor: pointer; 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  margin-left: 1em;
+  margin-right: 1em;
+}
+
+.welcome{
+  margin-top: 1em;
+  margin-bottom: 1em;
+  margin-left: 1em;
+  margin-right: 1em;
+}
+
