--- a/src/App.css
+++ b/src/App.css
@@ -47,6 +47,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: absolute;
+  right: 0px;
   margin-top: 1em;
   margin-bottom: 1em;
   margin-left: 1em;
@@ -60,3 +62,21 @@
   margin-right: 1em;
 }
 
+.logo {
+  width: 100px;
+  height: auto;
+  /* margin: 15px; */
+  margin-top: 15px;
+  margin-left: 15px;
+  margin-right: 15px;
+  margin-bottom: 5px;
+}
+
+.info{
+  text-align: center;
+}
+
+.login-logo{
+  width: 200px;
+  height: 200px;
+}
