--- a/src/components/DownloadFile.css
+++ b/src/components/DownloadFile.css
@@ -2,21 +2,22 @@
     padding: 10px;
     border: none;
     cursor: pointer;
-    background-color: green;
+    background-color: #979797;
     color: white;
     border-radius: 4px;
     margin-top: 10px;
     font-size: 16px;
     display: inline-block;
+    border-radius: 24px;
   }
   
   .download-button:hover {
-    background-color: #1ca51c; 
+    background-color: green; 
   }
   
   .loading-spinner {
-    border: 4px solid #f3f3f3; /* Light grey */
-    border-top: 4px solid #dc3545; /* Red */
+    border: 4px solid #f3f3f3; 
+    border-top: 4px solid #dc3545;
     border-radius: 50%;
     width: 20px;
     height: 20px;
