--- a/src/components/FileUpload.css
+++ b/src/components/FileUpload.css
@@ -3,30 +3,17 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 20px;
+    margin-top: 0px;
   }
   
   .file-upload input[type="file"] {
-    margin-bottom: 10px;
+    margin-bottom: 0px;
     padding: 10px;
     font-size: 16px;
     border: 1px solid #ccc;
     border-radius: 4px;
   }
   
-  .file-upload button {
-    padding: 10px 20px;
-    font-size: 16px;
-    color: #fff;
-    background-color: #007bff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  .file-upload button:hover {
-    background-color: #0056b3;
-  }
   
   .loading-spinner {
     border: 4px solid #f3f3f3; /* Light grey */
@@ -41,3 +28,52 @@
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
   }
+
+  .hasImage:hover section {
+    background-color: rgba(5, 5, 5, 0.4);
+  }
+  .hasImage:hover button:hover {
+    background: rgba(5, 5, 5, 0.45);
+  }
+  
+  #overlay p,
+  i {
+    opacity: 0;
+  }
+  
+  #overlay.draggedover {
+    background-color: rgba(255, 255, 255, 0.7);
+  }
+  #overlay.draggedover p,
+  #overlay.draggedover i {
+    opacity: 1;
+  }
+  
+  .group:hover .group-hover\:text-blue-800 {
+    color: #2b6cb0;
+  }
+
+  
+@media (min-width: 640px) {
+  #overlay {
+    width: 75%; /* 3/4 width */
+  }
+}
+
+@media (min-width: 768px) {
+  #overlay {
+    width: 66.67%; /* 2/3 width */
+  }
+}
+
+@media (min-width: 1024px) {
+  #overlay {
+    width: 50%; /* 1/2 width */
+  }
+}
+
+@media (min-width: 1280px) {
+  #overlay {
+    width: 33.33%; /* 1/3 width */
+  }
+}
